--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  path_provider: ^0.4.1
-  permission_handler: ^2.1.1
+  path_provider: ^0.5.0+1
+  permission_handler: ^3.0.0
 
 dev_dependencies:
   flutter_test:
